# TaipanMiner

./: .clangd  .clangd.example  .gitignore  CLAUDE.md  CMakeLists.txt  Makefile  README.md  favicon_svg_gz.c  gcovr-coveralls.json  index_css_gz.c  index_html_gz.c  index_js_gz.c  logo_svg_gz.c  partitions_esp32_4mb_coredump.csv  platformio.ini  prov_index_css_gz.c  prov_index_html_gz.c  prov_index_js_gz.c  sdkconfig.bitaxe-supra  sdkconfig.bitaxe601  sdkconfig.bitdsk-n8t-debug  sdkconfig.debug  sdkconfig.defaults
.claude/: settings.local.json
.github/workflows/: build.yml  pages.yml  release.yml
components/asic/: CMakeLists.txt  Kconfig
components/asic/include/: asic.h  asic_drop_detect.h  asic_internal.h  asic_metric_avg.h  asic_nonce_dedup.h  asic_pause_coalesce.h  asic_proto.h  asic_share_validator.h  bm1370.h  emc2101.h  emc2101_curve.h  tps546.h  tps546_decode.h
components/asic/src/: asic_drop_detect.c  asic_metric_avg.c  asic_nonce_dedup.c  asic_pause_coalesce.c  asic_proto.c  asic_share_validator.c  asic_task.c  bm1368_ops.c  bm1370.c  bm1370_ops.c  bm137x_chip_init.c  emc2101.c  tps546.c
components/bb_hw/: CMakeLists.txt
components/bb_hw/include/: bb_hw.h
components/board/: CMakeLists.txt
components/board/include/: asic_chip.h  board.h  board_gpio.h
components/config/: CMakeLists.txt
components/config/include/: config.h
components/config/src/: config.c
components/display/: CMakeLists.txt
components/display/include/: display.h  font8x16.h  logo_rgb565.h
components/display/src/: display.c  font8x16.c  logo_rgb565.c
components/http_server/: CMakeLists.txt  mining.html  mining.js  prov_form.html  prov_save.html  theme.css
components/http_server/include/: http_server.h
components/http_server/src/: http_server.c  http_utils.c  logo_svg.c  mining_html_gz.c  mining_js_gz.c  prov_form_html.c  prov_save_html_gz.c  theme_css.c  theme_css_gz.c
components/knot/: CMakeLists.txt  Kconfig
components/knot/include/: knot.h
components/knot/src/: knot.c  knot_table.c
components/led/: CMakeLists.txt
components/led/include/: led.h
components/led/src/: led.c
components/log_stream/include/: log_stream.h
components/log_stream/src/: log_stream.c
components/mining/: CMakeLists.txt  Kconfig
components/mining/include/: diag.h  mining.h  mining_diag.h  mining_pause_io.h  mining_pause_state.h  mining_pool_stats.h  sha256.h  sha256_hw.h  sha256_hw_ahb.h  sha256_hw_dport.h  sha256_hw_dport_kernel.h  share_validate.h  work.h
components/mining/src/: mining.c  mining_pause.c  mining_pause_espidf.c  mining_pause_state.c  mining_pool_stats.c  sha256.c  sha256_hw.c  sha256_hw_ahb.c  sha256_hw_dport.c  share_validate.c  work.c
components/ota_pull/: CMakeLists.txt
components/ota_validator/: CMakeLists.txt
components/stratum/: CMakeLists.txt
components/taipan_config/: CMakeLists.txt
components/taipan_web/: CMakeLists.txt  mining.html  mining.js
components/taipan_web/include/: routes_json.h  taipan_web.h
components/taipan_web/src/: mining_html_gz.c  mining_js_gz.c  routes.c  routes_json.c
components/webui/: CMakeLists.txt  Kconfig
components/webui/include/: routes_json.h  webui.h  webui_ids.h
components/webui/src/: routes.c  routes_json.c
components/wifi_prov/: CMakeLists.txt
docs/: api-audit.md
scripts/: embed_html.py  embed_partitions.py  fetch_breadboard.py  svg_to_rgb565.py
scripts/fleet/: README.md  cli.py  core.py  fleet  fleet.py  fleet.toml  registry.py
scripts/fleet/suites/: soak.py  (+3 more)
scripts/test/: AUDIT.md  Makefile  README.md  fleet  fleet.py  fleet_mqtt_reset.sh  fleetmon.py  fleetpull.py  fleetsoak.py  ota_push.sh  otaflash.py  pulltest.py  requirements.txt  run_matrix.sh  soak_monitor.sh  tlsrow.py  updatecheck.py
sdkconfig/: bitaxe  bitaxe-403  bitaxe-403-debug  bitaxe-601  bitaxe-601-debug  bitaxe-650  bitaxe-650-debug  debug-common  esp32-c3-supermini  esp32-c3-supermini-debug  esp32-classic  esp32-s2-mini  esp32-s2-mini-debug  esp32-wroom32  esp32-wroom32-cyd  esp32-wroom32-debug  no-psram  no-psram-ota  ota-boot  single-core  tdongle-s3  tdongle-s3-debug  tls-server
src/: CMakeLists.txt  board.h  main.c  partition_fixup.c  partition_fixup.h  partition_fixup_decision.c  partition_fixup_decision.h
src/boards/: bitaxe_601.h
src/ui/: ui.c  ui.h
test/test_host/: http_utils.c  test_asic_drop_detect.c  test_asic_job_table.c  test_asic_metric_avg.c  test_asic_nonce_dedup.c  test_asic_pause_coalesce.c  test_asic_proto.c  test_asic_share_validator.c  test_asic_ticket_mask.c  test_bb_pub_mining_emit.c  test_bm1370.c  test_bm1370_ticket_mask.c  test_config_autofan.c  test_config_hostname.c  test_config_knot.c  test_config_manifest.c  test_config_pools.c  test_diag_benchmark.c  test_emc2101_curve.c  test_emitter_fidelity.c  test_http_utils.c  test_knot.c  test_log_stream.c  test_main.c  test_mining.c  test_mining_pause_io.c  test_mining_pause_state.c  test_mining_pool_stats.c  test_nv_config.c  test_ota_pull.c  test_ota_validator.c  test_ota_validator_io.c  test_partition_fixup_decision.c  test_routes_json.c  test_routes_json_asic.c  test_sensors_miner_sag.c  test_sha256.c  test_share_validate.c  test_stats.c  test_stratum.c  (+9 more)
webui/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
webui/flasher/: .gitignore  index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
webui/miner/: .env.development.example  .gitignore  README.md  index.html  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
webui/prov/: package.json  vitest.config.ts
webui/src/: App.css  App.svelte  vite-env.d.ts
webui/ui-kit/: Brand.svelte  Brand.test.ts  Header.svelte  Header.test.ts  InfoCard.svelte  InfoCard.test.ts  InfoRow.svelte  InfoRow.test.ts  PasswordInput.test.ts  Select.svelte  Select.test.ts  StatField.svelte  StatField.test.ts  WifiSelect.svelte  WifiSelect.test.ts  package.json  signal.test.ts  signal.ts  test-setup.ts  tsconfig.json  version.test.ts  version.ts  vitest.config.ts
(+346 files in other folders)
